changing the button from vw to % because vw was causing overflow issues

--- a/src/less/dashboard.less
+++ b/src/less/dashboard.less
@@ -45,9 +45,9 @@
     }
     .btn {
       border: none;
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       margin-top: 3vh;
-      width: 12vw;
+      width: 95%;
       background: @secondarycolor;
     }
     .btn-sml {
